--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           >
           <ul class="header-list nav-list">
             <li class="header-list-item">
-              <a href="./index.html" class="header-list-item-link link"
+              <a
+                href="./index.html"
+                class="header-list-item-link link header-item-studio"
                 >Studio</a
               >
             </li>
@@ -73,6 +75,11 @@
           <h2 class="visually-hidden">About us</h2>
           <ul class="aboutus-list">
             <li class="aboutus-list-item">
+              <div class="aboutus-icon-wrap">
+                <svg class="aboutus-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-antenna-icon"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -80,6 +87,11 @@
               </p>
             </li>
             <li class="aboutus-list-item">
+              <div class="aboutus-icon-wrap">
+                <svg class="aboutus-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-clock-icon"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -87,6 +99,11 @@
               </p>
             </li>
             <li class="aboutus-list-item">
+              <div class="aboutus-icon-wrap">
+                <svg class="aboutus-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-diagram-icon"></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Diligence</h3>
               <p class="text">
                 Research and confirm brands with the strongest digital growth
@@ -94,6 +111,13 @@
               </p>
             </li>
             <li class="aboutus-list-item">
+              <div class="aboutus-icon-wrap">
+                <svg class="aboutus-icon" width="64" height="64">
+                  <use
+                    href="./images/icons/icons.svg#icon-astronaut-icon"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="subtitle">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,7 +135,7 @@
           <ul class="team-list">
             <li class="team-list-item">
               <img
-                src="./images/mark_guerrero.jpg"
+                src="./images/our-team/mark_guerrero.jpg"
                 alt="photo_mark_guerrero"
                 width="264"
                 height="260"
@@ -120,11 +144,43 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Mark Guerrero</h3>
                 <p class="text team-text">Product Designer</p>
+                <div class="team-social-icon-wrap">
+                  <ul class="team-social-icon-list">
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
               <img
-                src="./images/tom_ford.jpg"
+                src="./images/our-team/tom_ford.jpg"
                 alt="photo_tom_ford"
                 width="264"
                 height="260"
@@ -133,11 +189,43 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Tom Ford</h3>
                 <p class="text team-text">Frontend Developer</p>
+                <div class="team-social-icon-wrap">
+                  <ul class="team-social-icon-list">
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
               <img
-                src="./images/camila_garcia.jpg"
+                src="./images/our-team/camila_garcia.jpg"
                 alt="photo_camila_garcia"
                 width="264"
                 height="260"
@@ -146,11 +234,43 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Camila Garcia</h3>
                 <p class="text team-text">Marketing</p>
+                <div class="team-social-icon-wrap">
+                  <ul class="team-social-icon-list">
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
               <img
-                src="./images/daniel_wilson.jpg"
+                src="./images/our-team/daniel_wilson.jpg"
                 alt="photo_daniel_wilson"
                 width="264"
                 height="260"
@@ -159,6 +279,38 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Daniel Wilson</h3>
                 <p class="text team-text">UI Designer</p>
+                <div class="team-social-icon-wrap">
+                  <ul class="team-social-icon-list">
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="team-social-item">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-icon"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
