--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li class="aboutus-list-item">
               <div class="aboutus-icon-wrap">
                 <svg class="aboutus-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-antenna-icon"></use>
+                  <use href="./images/icons.svg#icon-antenna-icon"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Strategy</h3>
@@ -87,7 +87,7 @@
             <li class="aboutus-list-item">
               <div class="aboutus-icon-wrap">
                 <svg class="aboutus-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock-icon"></use>
+                  <use href="./images/icons.svg#icon-clock-icon"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Punctuality</h3>
@@ -99,7 +99,7 @@
             <li class="aboutus-list-item">
               <div class="aboutus-icon-wrap">
                 <svg class="aboutus-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-diagram-icon"></use>
+                  <use href="./images/icons.svg#icon-diagram-icon"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Diligence</h3>
@@ -111,9 +111,7 @@
             <li class="aboutus-list-item">
               <div class="aboutus-icon-wrap">
                 <svg class="aboutus-icon" width="64" height="64">
-                  <use
-                    href="./images/icons/icons.svg#icon-astronaut-icon"
-                  ></use>
+                  <use href="./images/icons.svg#icon-astronaut-icon"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Technologies</h3>
@@ -142,46 +140,40 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Mark Guerrero</h3>
                 <p class="text team-text">Product Designer</p>
-                <div class="team-social-icon-wrap">
-                  <ul class="team-social-icon-list">
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-instagram-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-twitter-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-facebook-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-linkedin-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+              </div>
+              <div class="team-social-icon-wrap">
+                <ul class="team-social-icon-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -195,46 +187,40 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Tom Ford</h3>
                 <p class="text team-text">Frontend Developer</p>
-                <div class="team-social-icon-wrap">
-                  <ul class="team-social-icon-list">
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-instagram-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-twitter-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-facebook-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-linkedin-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+              </div>
+              <div class="team-social-icon-wrap">
+                <ul class="team-social-icon-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -248,46 +234,40 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Camila Garcia</h3>
                 <p class="text team-text">Marketing</p>
-                <div class="team-social-icon-wrap">
-                  <ul class="team-social-icon-list">
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-instagram-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-twitter-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-facebook-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-linkedin-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+              </div>
+              <div class="team-social-icon-wrap">
+                <ul class="team-social-icon-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -301,46 +281,40 @@
               <div class="team-item-content">
                 <h3 class="subtitle team-name">Daniel Wilson</h3>
                 <p class="text team-text">UI Designer</p>
-                <div class="team-social-icon-wrap">
-                  <ul class="team-social-icon-list">
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-instagram-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-twitter-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-facebook-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-item">
-                      <a href="#" class="team-social-link">
-                        <svg class="social-icon" width="16" height="16">
-                          <use
-                            href="./images/icons/icons.svg#icon-linkedin-icon"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+              </div>
+              <div class="team-social-icon-wrap">
+                <ul class="team-social-icon-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram-icon"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -479,7 +453,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-content-wrap">
           <a href="./index.html" class="logo logo-footer"
             >Web<span class="logo-span-footer">Studio</span></a
           >
@@ -489,35 +463,33 @@
           </p>
         </div>
         <div class="footer-social">
-          <h2 class="footer-social-title">Social media</h2>
+          <p class="footer-social-title">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="#" class="social-link">
-                <svg class="footer-social-icon">
-                  <use
-                    href="./images/icons/icons.svg#icon-instagram-icon"
-                  ></use>
+                <svg width="24" height="24" class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-instagram-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="social-link">
-                <svg class="footer-social-icon">
-                  <use href="./images/icons/icons.svg#icon-twitter-icon"></use>
+                <svg width="24" height="24" class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-twitter-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="social-link">
-                <svg class="footer-social-icon">
-                  <use href="./images/icons/icons.svg#icon-facebook-icon"></use>
+                <svg width="24" height="24" class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-facebook-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="social-link">
-                <svg class="footer-social-icon">
-                  <use href="./images/icons/icons.svg#icon-linkedin-icon"></use>
+                <svg width="24" height="24" class="footer-social-icon">
+                  <use href="./images/icons.svg#icon-linkedin-icon"></use>
                 </svg>
               </a>
             </li>
